# wutconv

./: .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: build-test.yml
docs/: TODO.txt
misc/: TODO.txt
source/man/man1/: Makefile.am  wutconv.1.man.in  wutconv.1.txt
source/progs/bash/: Makefile.am  wutconv.in  wutconv.sh.in
src/bash-comp/: Makefile.am  Makemodule.am  wutconv.sh.in
src/man/1/: Makefile.am  wutconv.1.man.in
src/manpages/man1/: Makefile.am  wutconv.1.txt
src/prg/bash/: Makefile.am  wutconv.sh.in
src/prg/test/: Makefile.am  Test01.txt.in  Test01Answer.txt.in  Test01verbose.txt.in  Test01verboseAnswer.txt.in  Test02.txt.in  Test02Answer.txt.in  Test02verbose.txt.in  Test02verboseAnswer.txt.in  Test03.txt.in  Test03Answer.txt.in  Test03verbose.txt.in  Test03verboseAnswer.txt.in  Test04.txt.in  Test04Answer.txt.in  Test04verbose.txt.in  Test04verboseAnswer.txt.in  Test05File1.txt.in  Test05File1Answer.txt.in  Test05File1verbose.txt.in  Test05File1verboseAnswer.txt.in  Test05File2.txt.in  Test05File2Answer.txt.in  Test05File2verbose.txt.in  Test05File2verboseAnswer.txt.in  Test06File1.txt.in  Test06File1Answer.txt.in  Test06File1verbose.txt.in  Test06File1verboseAnswer.txt.in  Test06File2.txt.in  Test06File2Answer.txt.in  Test06File2verbose.txt.in  Test06File2verboseAnswer.txt.in  test-menu.sh.in  test01.sh.in  test01verbose.sh.in  test02.sh.in  test02verbose.sh.in  test03.sh.in  test03verbose.sh.in  (+6 more)
src/scripts/: Makefile.am  wutconv.in
